[project]
name = "journey2md"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "pytz>=2024.2",
    "markdownify>=0.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
journey2md = "journey2md.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.12.0",
    "types-pytz>=2024.2.0.20241003",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/journey2md"]
